@@ -1,5 +1,10 @@
 2007-01-05  Andreas Røsdal  <andreasr@gnome.org>
 
+	* src/lib/sudoku_generator_gui.py: Disable generate options while
+	the puzzle generator is running (Bug #392947).
+
+2007-01-05  Andreas Røsdal  <andreasr@gnome.org>
+
 	* src/lib/dialog_swallower.py: Correct Bug #384684: Crash when 
 	closing game with "x", which was caused by reading data from
 	memory which had already been freed by the garbage collection. 
